# RustBevy

./: .gitignore  Cargo.toml  README.html  README.md  bevyplataform.prompt  game_metadata.yaml  generate_simple_sounds.py  generate_sounds.py  prepare_itchio_publish.bat  run_game.bat
itchio_release/: README.txt
src/: main.rs
